Tim/feat/connector patches (#147)
* Update Irmin SDK

* Binary utils

* Update concepts-and-processes.md

* Update common connector structure for patches and webhooks

* Implement patches and webhooks in existing connectors

* Update e2e tests

* Update connector capabilities validator

* Format

* Fix linter errors and warnings

* docs: auto-generate documentation

Auto-generated by generate-docs.sh workflow

* Fix potential bugs

* docs: auto-generate documentation

Auto-generated by generate-docs.sh workflow

* Bump up SDK version

* docs: auto-generate documentation

Auto-generated by generate-docs.sh workflow

* Update operationPatch.go

* Update operationPatch.go

* docs: auto-generate documentation

Auto-generated by generate-docs.sh workflow

* Update operationPatch.go

* docs: auto-generate documentation

Auto-generated by generate-docs.sh workflow

---------
