# irmin-connectors/models/connectorDetails.go
@@ -10,7 +10,7 @@ type ConnectorDetails struct {
 	Author           string                            `json:"author"            example:"Irmin Team"`
 	APIBaseURL       string                            `json:"api_base_url"      example:"https://connectors.irmin.co/mysql"`
 	LogoURL          string                            `json:"logo_url"          example:"https://cdn.irmin.co/connectors/mysql.png"`
-	Capabilities     []irminmodels.ConnectorCapability `json:"capabilities"      example:"pull,push"                                                                                                                                  enums:"pull,push,push_patch,event_webhook"`
+	Capabilities     []irminmodels.ConnectorCapability `json:"capabilities"      example:"pull,push"                                                                                                                                  enums:"pull,push,apply_patch,patch_event"`
 	Locales          []string                          `json:"locales"           example:"en,fi"`
 	PrimaryCategory  irminmodels.ConnectorCategory     `json:"primary_category"  example:"database"`
 	Categories       []irminmodels.ConnectorCategory   `json:"categories"        example:"database,crm,erp,warehouse,marketing,analytics,storage,messaging,payment,social,calendar,project_management,ecommerce,iot,monitoring,other"`
